@@ -3,6 +3,8 @@ Revision history for Perl extension Data-Gimei
 {{$NEXT}}
 
     - clean up old random number generator
+    - change first, last -> forename, surname
+    - Add test for Address#romaji()
 
 v0.3.0 2022-09-16T03:38:25Z
 
